# DotnetCrossPlatformNativeLibrary

./: .gitignore  Cross.slnx  Directory.Build.props  Directory.Packages.props  README.md  publish-AvaloniaDynamicLibraryTest.bat  publish-AvaloniaEncryptedCSharpFileTest-aot.bat  publish-AvaloniaEncryptedCSharpFileTest-linux-x64.bat  publish-AvaloniaEncryptedCSharpFileTest-win-x64-aot.bat  publish-AvaloniaEncryptedCSharpFileTest.bat  publish-AvaloniaManagedLibraryTest.bat  publish-avalonia-aot.bat  publish-avalonia.bat  publish.bat  publish_AvaloniaManagedLibraryTest.ps1  publish_AvaloniaManagedLibraryTest_all.bat  publish_AvaloniaManagedLibraryTest_linux-x64.bat  publish_AvaloniaManagedLibraryTest_linux-x64.sh  publish_AvaloniaManagedLibraryTest_win-x64.bat
doc/: TimeMeaningLibrary 项目需求文档.md  dotnet-cross-platform-native-library.md
src/AvaloniaDynamicLibraryTest/: App.axaml  App.axaml.cs  AvaloniaDynamicLibraryTest.csproj  Program.cs  Roots.xml  app.manifest
src/AvaloniaEncryptedCSharpFileTest/: App.axaml  App.axaml.cs  AvaloniaEncryptedCSharpFileTest.csproj  Program.cs  Roots.xml  app.manifest
src/AvaloniaManagedLibraryTest/: App.axaml  App.axaml.cs  AvaloniaManagedLibraryTest.csproj  Program.cs  Roots.xml  app.manifest
src/cpp.native.dll/: CMakeLists.txt  GetTimeMeaning.cpp  GetTimeMeaning.h  build_linux.sh  build_win.bat
src/csharp.test.dynamic/: Program.cs  TimeMeaningNative.cs  csharp.test.dynamic.csproj
src/csharp.test.dynamic-success/: Program.cs  csharp.test.dynamic.csproj
src/csharp.test.dynamic-sucess/: Program.cs
(+98 files in other folders)
